29. Wrap up development, add favicon, meta tags and deploy.

--- a/necro/index.html
+++ b/necro/index.html
@@ -1,4 +1,25 @@
-<body style="display:flex;align-items:center;justify-content:center;background:#181622;touch-action:none">
-<canvas id=c style="image-rendering:pixelated"></canvas>
-<script type=module src="/src/index.ts"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Roguelite / Shoot 'em up game created using HTML5 Canvas API, JavaScript ES6 & deployed by ajfm88."
+    />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>🧙‍♂️ Norman The Necromancer 🧟</title>
+  </head>
+  <body
+    style="
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #181622;
+      touch-action: none;
+    "
+  >
+    <canvas id="c" style="image-rendering: pixelated"></canvas>
+    <script type="module" src="/src/index.ts"></script>
+  </body>
+</html>
